# reading_companion

./: .agents-cli-spec.md  .gitignore  .pre-commit-config.yaml  README.md
.agents/: AGENTS.md  hooks.json
.agents/scripts/: validate_tool_call.py
.agents/skills/gherkin-specification-writing/: SKILL.md
.agents/skills/gherkin-specification-writing/evals/: README.md  eval_cases.json
.agents/skills/security-review/: SKILL.md
.agents/skills/security-review/evals/: README.md  eval_cases.json
.agents/skills/spec-sync/: SKILL.md
.agents/skills/spec-sync/evals/: README.md  eval_cases.json
.claude/: settings.json
.claude/agents/: architect.md
.gemini/: settings.json
.gemini/agents/: architect.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.semgrep/: rules.yaml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  discussion_agent_client.py  errors.py  fake_discussion_agent_client.py  fake_llm_client.py  ids.py  llm_client.py  llm_prompts.py  main.py  models.py  parsing.py  passages.py  telemetry.py  untrusted.py  viewport.py
backend/app/blob/: __init__.py  gcs_blob_store.py  memory_blob_store.py
backend/app/routers/: discussions.py  documents.py  journal.py  notes.py  suggestions.py  workspaces.py
backend/app/store/: __init__.py  firestore_store.py  memory_store.py
backend/deployment/terraform/: apis.tf  firestore.tf  iam.tf  outputs.tf  providers.tf  service.tf  storage.tf  variables.tf
backend/tests/: conftest.py
backend/tests/api/: test_discussions.py  test_documents.py  test_journal.py  test_notes.py  test_suggestions.py  test_tracing.py  test_workspaces.py
backend/tests/bdd/: conftest.py  test_discussion.py  test_document_upload.py  test_notes.py  test_passage_marking.py  test_reading_journal.py  test_reading_view.py  test_security_workspace_isolation.py  test_workspace_lifecycle.py
backend/tests/integration/: test_firestore_store.py
backend/tests/unit/: test_app_factory.py  test_discussion_agent_client.py  test_fake_discussion_agent_client.py  test_fake_llm_client.py  test_ids.py  test_llm_client.py  test_llm_prompts.py  test_memory_store_discussions.py  test_memory_store_journal.py  test_parsing.py  test_passages.py  test_rate_limit.py  test_telemetry.py  test_untrusted.py  test_viewport.py
discussion-agent/: .env.example  Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml
discussion-agent/app/: agent.py  context_assembly.py  document_search.py  fast_api_app.py  rate_limit.py  untrusted.py  web_search.py
discussion-agent/app/app_utils/: telemetry.py  typing.py
discussion-agent/deployment/terraform/shared/: dummy_source.b64
discussion-agent/deployment/terraform/single-project/: service.tf  variables.tf
discussion-agent/deployment/terraform/single-project/vars/: env.tfvars
discussion-agent/tests/: conftest.py
discussion-agent/tests/bdd/: conftest.py  test_discussion.py  test_security.py
discussion-agent/tests/eval/: check_threshold.py  metrics.py
discussion-agent/tests/eval/datasets/: basic-dataset.json
discussion-agent/tests/integration/: test_agent.py  test_server_e2e.py
discussion-agent/tests/unit/: test_agent_construction.py  test_check_threshold.py  test_context_assembly.py  test_document_search.py  test_incoming_context.py  test_untrusted.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
frontend/scripts/: check-no-dangerous-html.mjs
frontend/src/: main.tsx  routes.tsx
frontend/src/api/: client.ts  discussions.ts  documents.ts  journal.ts  notes.ts  queries.ts  suggestions.ts  types.ts  workspaces.ts
frontend/src/discussion/: DiscussionList.tsx  DiscussionListView.tsx  DiscussionPanel.tsx  DiscussionThread.tsx  MessageComposer.tsx  PendingIndicator.tsx  ToolCallTrace.tsx  TurnItem.tsx  TurnList.tsx  mapComposerError.ts
frontend/src/document/: Block.tsx  ReadingView.tsx  SuggestionsPopover.tsx  UploadPanel.tsx  mapSuggestionsError.ts  passageFromSelection.ts  useViewportTracker.ts
frontend/src/journal/: JournalMarkdown.tsx  JournalTab.tsx  mapJournalError.ts
frontend/src/lib/: debounce.ts  errors.ts
frontend/src/note/: NoteComposer.tsx  NoteIndicator.tsx  NoteItem.tsx  NotesTab.tsx  mapNoteError.ts
frontend/src/ui/: ConfirmDialog.tsx  ErrorNotice.tsx  LoadingState.tsx  Toast.tsx
frontend/src/workspace/: DocumentWorkspace.tsx  NotFoundPage.tsx  RootRedirect.tsx  WorkspacePage.tsx  workspaceCookie.ts
frontend/tests/: setupTests.ts
frontend/tests/e2e/: helpers.ts  upload-and-read.spec.ts  zzz-rate-limit.spec.ts
frontend/tests/unit/: Block.test.tsx  DiscussionList.test.tsx  DiscussionPanel.test.tsx  ErrorNotice.xss.test.tsx  JournalMarkdown.xss.test.tsx  JournalTab.test.tsx  MessageComposer.test.tsx  NoteComposer.test.tsx  NoteIndicator.test.tsx  NotesTab.test.tsx  ReadingView.notesAndMarking.test.tsx  ReadingView.onViewportChange.test.tsx  ReadingView.test.tsx  SuggestionsPopover.test.tsx  ToolCallTrace.test.tsx  TurnItem.xss.test.tsx  UploadPanel.test.tsx  WorkspacePage.immutable.test.tsx  debounce.test.ts  errors.test.ts  mapJournalError.test.ts  mapNoteError.test.ts  mapSuggestionsError.test.ts  passageFromSelection.test.ts  queries.429.test.tsx  queries.discussions.test.tsx  queries.journal.test.tsx  queries.notes.test.tsx  useViewportTracker.test.tsx  workspaceCookie.test.ts
spec/: technical_specification.md  threat_model.md  user_specification.md
spec/contracts/: README.md  agent-contract.yaml  api.openapi.yaml  data-model.yaml
spec/features/: README.md  discussion.feature  document-upload.feature  notes.feature  passage-marking.feature  reading-journal.feature  reading-view.feature  security.feature  workspace-lifecycle.feature
(+17 files in other folders)
