[project]
name = "backend"
version = "0.1.0"
description = "Reading-companion backend: FastAPI service for workspace, document, notes, discussion, and journal persistence."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0,<1.0.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "google-cloud-firestore>=2.28.0,<3.0.0",
    "google-cloud-storage>=3.12.0,<4.0.0",
    "markdown-it-py>=4.2.0,<5.0.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0,<1.0.0",
    "google-genai>=2.10.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-bdd>=8.1.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
