[project]
name = "backend"
version = "0.1.0"
description = "Reading-companion backend: FastAPI service for workspace, document, notes, discussion, and journal persistence."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0,<1.0.0",
    "uvicorn[standard]>=0.50.2",
    "python-multipart>=0.0.20",
    "google-cloud-firestore>=2.28.0,<3.0.0",
    "google-cloud-storage>=3.12.0,<4.0.0",
    "markdown-it-py>=4.2.0,<5.0.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0,<1.0.0",
    "google-genai>=2.10.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-bdd>=8.1.0,<9.0.0",
    "ruff>=0.4.6,<1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = [
    "E501",  # line too long
    "C901",  # too complex
    "B006",  # mutable default argument
    "B904",  # raise-without-from-inside-except: pre-existing across the codebase,
             # not introduced by adding lint tooling; revisit as its own cleanup
    "B008",  # function-call-in-default-argument: FastAPI's `Depends(...)`/`File(...)`
             # pattern relies on this, not a bug
    "UP017", # datetime.UTC alias: pre-existing `timezone.utc` usage throughout;
             # revisit as its own cleanup
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# Pre-existing style debt in tests/, not touched here to keep this CI-onboarding
# change from mixing test-file and implementation-file edits in one change.
"tests/**" = ["I001", "F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
