[project]
name = "discussion-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "your@email.com"},
]

dependencies = [
    "google-adk[gcp]>=2.3.0,<3.0.0",
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.16.1,<4.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.159.0",
    "protobuf>=6.31.1,<7.0.0",
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "pytest-bdd>=8.1.0,<9.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.3.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.159.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.56",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/package-lock.json"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live_model: makes a real Gemini/Vertex call; excluded from CI by default (-m \"not live_model\")",
    "requires_gcp_credentials: needs real ADC to start (e.g. app.fast_api_app's module-level google.auth.default()); excluded from CI's credential-free test job",
]

[tool.hatch.build.targets.wheel]
packages = ["app","frontend"]

[[tool.ty.overrides]]
# google-adk's `BaseAgent.canonical_after_model_callbacks` is typed as a
# generic callable, erasing the actual after_model_callback signature this
# test calls with keyword arguments -- an ADK typing limitation, not a real
# bug in our code. Scoped narrowly to this one file/rule set.
include = ["tests/bdd/test_security.py"]

[tool.ty.overrides.rules]
unknown-argument = "ignore"
missing-argument = "ignore"
not-iterable = "ignore"
